crates/sith_python_parser/src/snapshots/sith_python_parser__lexer__tests__string_continuation_with_unix_eol.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: string_continuation_with_eol(UNIX_EOL)
---
## Tokens
```
[
    (
        String(
            "abc\\\ndef",
        ),
        0..10,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        Newline,
        10..10,
    ),
]
```
